--- a/arraylists.html
+++ b/arraylists.html
@@ -53,7 +53,7 @@
                 <div class="collapse navbar-collapse" id="toggle-menu">
                     <ul class="navbar-nav nav-pills ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="colorfull.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -82,7 +82,7 @@
                 <div class="col-12">
                     <ul class="mb-0 breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="colorfull.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="breadcrumb-item">
                             <a href="portfolio.html">Portfolio</a>
