--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     <header id="header" class="header fixed-top">
         <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold" href="home.html">Elizabeth<span
+                <a class="navbar-brand font-weight-bold" href="index.html">Elizabeth<span
                         class="base-color">Trykin</span></a>
                 <!--  Navbar Toggler Button Start -->
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu"
@@ -53,7 +53,7 @@
                 <div class="collapse navbar-collapse" id="toggle-menu">
                     <ul class="navbar-nav nav-pills ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="portfolio.html">Portfolio</a>
@@ -82,7 +82,7 @@
                 <div class="col-12">
                     <ul class="mb-0 breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="home.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="breadcrumb-item">Portfolio</li>
                     </ul>
