--- a/arrays.html
+++ b/arrays.html
@@ -167,6 +167,11 @@
                         </div>
                     </div>
                     <div class="text-left mt-4 mb-4 mr-4 ml-4">
+                        <p>The purpose of this program was to use parallel arrays to compare cats, by different
+                            factors such as colour, breed, affection etc.</p>
+                        <p>In the first step above, I declared and assigned sizes to 5 parallel arrays. This means
+                            that
+                            cat 1 would be at index 0 for all 5 arrays.</p>
                         <p>In the first step below, I declared and assigned sizes to 5 parallel arrays. This
                             means that cat 1 would be at index 0 for all 5 arrays.</p>
                         <div class="mt-4 mb-4">
@@ -174,11 +179,6 @@
                                 <img src="assets/img/Arrays-image1.jpg" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The purpose of this program was to use parallel arrays and compare cats, by different
-                            factors such as colour, breed, affection etc.</p>
-                        <p>In the first step above, I declared and assigned sizes to 5 parallel arrays. This means
-                            that
-                            cat 1 would be at index 0 for all 5 arrays.</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
                                 <img src="assets/img/Arrays-image2.jpg" class="d-block" alt="...">
