--- a/arrays.html
+++ b/arrays.html
@@ -149,11 +149,13 @@
                             <ul class=" mt-4 checkmark-list mb-4">
                                 <!-- Item-01 -->
                                 <li class="mb-2">
-                                    <span>ArrayIndexOutOfBounds - If a for loop increments past the final index of an array (length-1), it will crash. </span>
+                                    <span>ArrayIndexOutOfBounds - If a for loop increments past the final index of an
+                                        array (length-1), it will crash. </span>
                                 </li>
                                 <!-- Item-02 -->
                                 <li class="mb-2">
-                                    <span>Off-By-One - We naturally start counting at 1, but the first index of an array is 0.</span>
+                                    <span>Off-By-One - We naturally start counting at 1, but the first index of an array
+                                        is 0.</span>
                                 </li>
                             </ul>
                         </div>
@@ -167,28 +169,27 @@
                         </div>
                     </div>
                     <div class="text-left mt-4 mb-4 mr-4 ml-4">
-                        <p>The purpose of this program was to use parallel arrays to compare cats, by different
+                        <p>The purpose of this program iss to use parallel arrays to compare cats, by different
                             factors such as colour, breed, affection etc.</p>
-                        <p>In the first step above, I declared and assigned sizes to 5 parallel arrays. This means
-                            that
-                            cat 1 would be at index 0 for all 5 arrays.</p>
-                        <p>In the first step below, I declared and assigned sizes to 5 parallel arrays. This
-                            means that cat 1 would be at index 0 for all 5 arrays.</p>
+                        <p>We made a 5 parallel arrays that each store a certain type of score. The program then uses a for loop to
+                            determine the maximum score and the cat it belongs to.</p>
+                        <p>In the first step below, I declared and assigned sizes to 5 parallel arrays. This means
+                            that cat 1 would be at index 0 for all 5 arrays.</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
                                 <img src="assets/img/Arrays-image1.jpg" class="d-block" alt="...">
                             </div>
                         </div>
+                        <p>The intention behind the displayBest method below iss for the program to look through and
+                            compare all 5 cats, to find the one with the highest score. I created a maxScore
+                            variable and a currentScore variable, and the if statement would change maxScore to
+                            equal currentScore if it's value was larger.</p>
+                    </div>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
                                 <img src="assets/img/Arrays-image2.jpg" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The intention behind the display best method was for the program to look through and
-                            compare all 5 cats, to find the one with the highest score. I created a maxScore
-                            variable and a currentScore variable, and the if statement would change maxScore to
-                            equal currentScore if it's value was larger.</p>
-                    </div>
                 </div>
             </div>
     </section>
