--- a/2Darrays.html
+++ b/2Darrays.html
@@ -171,27 +171,27 @@
                         </div>
                     </div>
                     <div class="text-left mt-4 mb-4 mr-4 ml-4">
-                        <p>In the first step below, I declared and assigned sizes to 5 parallel arrays. This
-                            means that cat 1 would be at index 0 for all 5 arrays.</p>
+                        <p>The purpose of this program was to use a 2d arrays to store 6 values for cats: total score,
+                            name, colour score, breed score, affection score and discipline score. </p>
+                        <p>We made a 2D String array that stores all the values, and when comparing used
+                            Integer.parseInt to convert the values into integers. The program then uses a for loop to
+                            determine the maximum score and the cat it belongs to.</p>
+                        <p>In the first step below, I declared a 2D array of 5 rows and 6 columns, since there are 5
+                            cats and 6 different values per cat.</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
                                 <img src="assets/img/2darrays-01.jpg" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The purpose of this program was to use parallel arrays and compare cats, by different
-                            factors such as colour, breed, affection etc.</p>
-                        <p>In the first step above, I declared and assigned sizes to 5 parallel arrays. This means
-                            that
-                            cat 1 would be at index 0 for all 5 arrays.</p>
+                        <p>The intention behind the displayBest method below was for the program to look through and
+                            compare all 5 cats, to find the one with the highest score. I created a maxRate
+                            variable and a rowRate variable, and the if statement would change maxRate to
+                            equal rowRate if it's value was greater.</p>
                         <div class="mt-4 mb-4">
                             <div class="portfolio-single-item image-border">
                                 <img src="assets/img/2darrays-02.jpg" class="d-block" alt="...">
                             </div>
                         </div>
-                        <p>The intention behind the display best method was for the program to look through and
-                            compare all 5 cats, to find the one with the highest score. I created a maxScore
-                            variable and a currentScore variable, and the if statement would change maxScore to
-                            equal currentScore if it's value was larger.</p>
                     </div>
                 </div>
             </div>
