--- a/portfolio.html
+++ b/portfolio.html
@@ -202,15 +202,15 @@
                         </div>
                     </div>
                 </div>
-                <!-- Reccursion -->
+                <!-- recursion -->
                 <div class="col-lg-4 portfolio-item others">
                     <div class="image-border">
                         <div class="portfolio-item-content">
-                            <img src="assets/img/portfolio-reccursion.png" alt="" class="img-fluid">
+                            <img src="assets/img/portfolio-recursion.png" alt="" class="img-fluid">
                             <div class="img-overlay text-center">
                                 <div class="img-overlay-content">
                                     <div class="portfolio-icon">
-                                        <a href="reccursion.html"><i class="lni-link"></i></a>
+                                        <a href="recursion.html"><i class="lni-link"></i></a>
                                     </div>
                                 </div>
                             </div>
